Added some text

--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-<html></html>
-<head></head>
-<title></title>
-<body></body>
+<!DOCTYPE html>
+<html>
+<head>
+<title>HTML Me Something</title>
+</head>
+<body>
+    <article>
+        <p>The story of my professional career begins at the ripe old age of seventeen. I was in high school and needed a job and I was under the assumption that KMart would be easy enough. I was correct. It was honestly the easiest job I've ever had. I worked that job for a year
+</body>
