--- a/index.html
+++ b/index.html
@@ -5,5 +5,10 @@
 </head>
 <body>
     <article>
-        <p>The story of my professional career begins at the ripe old age of seventeen. I was in high school and needed a job and I was under the assumption that KMart would be easy enough. I was correct. It was honestly the easiest job I've ever had. I worked that job for a year
+        <p>The story of my professional career begins at the ripe old age of
+            seventeen. I was in high school and needed a job and I was under
+             the assumption that KMart would be easy enough. I was correct. It
+              was honestly the easiest job I've ever had. I worked that job for
+               a year at which point I was working 4-5 hours a week and barely
+                making enough money to pay for gas.
 </body>
